PatitoParser.py
# Generated from Patito.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'program'", "';'", "'var'", "','", "':'", 
                     "'{'", "'}'", "'='", "'if ('", "')'", "'else'", "'print ('", 
                     "'cte.string'", "');'", "'>'", "'<'", "'<>'", "'+'", 
                     "'-'", "'*'", "'/'", "'('" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS", "TIPO", 
                      "VARCTE", "ID" ]

    RULE_programa = 0
    RULE_varz = 1
    RULE_bloque = 2
    RULE_estatuto = 3
    RULE_asignacion = 4
    RULE_condicion = 5
    RULE_escritura = 6
    RULE_expresion = 7
    RULE_exp = 8
    RULE_termino = 9
    RULE_factor = 10

    ruleNames =  [ "programa", "varz", "bloque", "estatuto", "asignacion", 
                   "condicion", "escritura", "expresion", "exp", "termino", 
                   "factor" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    WS=23
    TIPO=24
    VARCTE=25
    ID=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def bloque(self):
            return self.getTypedRuleContext(PatitoParser.BloqueContext,0)


        def varz(self):
            return self.getTypedRuleContext(PatitoParser.VarzContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = PatitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(PatitoParser.T__0)
            self.state = 23
            self.match(PatitoParser.ID)
            self.state = 24
            self.match(PatitoParser.T__1)
            self.state = 26
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PatitoParser.T__2:
                self.state = 25
                self.varz()


            self.state = 28
            self.bloque()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarzContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParser.ID)
            else:
                return self.getToken(PatitoParser.ID, i)

        def TIPO(self, i:int=None):
            if i is None:
                return self.getTokens(PatitoParser.TIPO)
            else:
                return self.getToken(PatitoParser.TIPO, i)

        def getRuleIndex(self):
            return PatitoParser.RULE_varz

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarz" ):
                listener.enterVarz(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarz" ):
                listener.exitVarz(self)




    def varz(self):

        localctx = PatitoParser.VarzContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_varz)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 30
            self.match(PatitoParser.T__2)
            self.state = 42 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 31
                self.match(PatitoParser.ID)
                self.state = 36
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==PatitoParser.T__3:
                    self.state = 32
                    self.match(PatitoParser.T__3)
                    self.state = 33
                    self.match(PatitoParser.ID)
                    self.state = 38
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 39
                self.match(PatitoParser.T__4)
                self.state = 40
                self.match(PatitoParser.TIPO)
                self.state = 41
                self.match(PatitoParser.T__1)
                self.state = 44 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==PatitoParser.ID):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(PatitoParser.EstatutoContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)




    def bloque(self):

        localctx = PatitoParser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(PatitoParser.T__5)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PatitoParser.T__8) | (1 << PatitoParser.T__11) | (1 << PatitoParser.ID))) != 0):
                self.state = 47
                self.estatuto()
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 53
            self.match(PatitoParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asignacion(self):
            return self.getTypedRuleContext(PatitoParser.AsignacionContext,0)


        def condicion(self):
            return self.getTypedRuleContext(PatitoParser.CondicionContext,0)


        def escritura(self):
            return self.getTypedRuleContext(PatitoParser.EscrituraContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)




    def estatuto(self):

        localctx = PatitoParser.EstatutoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_estatuto)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.ID]:
                self.state = 55
                self.asignacion()
                pass
            elif token in [PatitoParser.T__8]:
                self.state = 56
                self.condicion()
                pass
            elif token in [PatitoParser.T__11]:
                self.state = 57
                self.escritura()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsignacionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_asignacion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsignacion" ):
                listener.enterAsignacion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsignacion" ):
                listener.exitAsignacion(self)




    def asignacion(self):

        localctx = PatitoParser.AsignacionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_asignacion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(PatitoParser.ID)
            self.state = 61
            self.match(PatitoParser.T__7)
            self.state = 62
            self.expresion()
            self.state = 63
            self.match(PatitoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def bloque(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.BloqueContext)
            else:
                return self.getTypedRuleContext(PatitoParser.BloqueContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_condicion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicion" ):
                listener.enterCondicion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicion" ):
                listener.exitCondicion(self)




    def condicion(self):

        localctx = PatitoParser.CondicionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_condicion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(PatitoParser.T__8)
            self.state = 66
            self.expresion()
            self.state = 67
            self.match(PatitoParser.T__9)
            self.state = 68
            self.bloque()
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==PatitoParser.T__10:
                self.state = 69
                self.match(PatitoParser.T__10)
                self.state = 70
                self.bloque()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscrituraContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.ExpresionContext)
            else:
                return self.getTypedRuleContext(PatitoParser.ExpresionContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_escritura

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscritura" ):
                listener.enterEscritura(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscritura" ):
                listener.exitEscritura(self)




    def escritura(self):

        localctx = PatitoParser.EscrituraContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_escritura)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(PatitoParser.T__11)
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.T__17, PatitoParser.T__18, PatitoParser.T__21, PatitoParser.VARCTE]:
                self.state = 74
                self.expresion()
                pass
            elif token in [PatitoParser.T__12]:
                self.state = 75
                self.match(PatitoParser.T__12)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PatitoParser.T__3 or _la==PatitoParser.T__12:
                self.state = 81
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [PatitoParser.T__3]:
                    self.state = 78
                    self.match(PatitoParser.T__3)
                    self.state = 79
                    self.expresion()
                    pass
                elif token in [PatitoParser.T__12]:
                    self.state = 80
                    self.match(PatitoParser.T__12)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 86
            self.match(PatitoParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpresionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.ExpContext)
            else:
                return self.getTypedRuleContext(PatitoParser.ExpContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_expresion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpresion" ):
                listener.enterExpresion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpresion" ):
                listener.exitExpresion(self)




    def expresion(self):

        localctx = PatitoParser.ExpresionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expresion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.exp()
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PatitoParser.T__14) | (1 << PatitoParser.T__15) | (1 << PatitoParser.T__16))) != 0):
                self.state = 89
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << PatitoParser.T__14) | (1 << PatitoParser.T__15) | (1 << PatitoParser.T__16))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 90
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def termino(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.TerminoContext)
            else:
                return self.getTypedRuleContext(PatitoParser.TerminoContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_exp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExp" ):
                listener.enterExp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExp" ):
                listener.exitExp(self)




    def exp(self):

        localctx = PatitoParser.ExpContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_exp)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.termino()
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PatitoParser.T__17 or _la==PatitoParser.T__18:
                self.state = 94
                _la = self._input.LA(1)
                if not(_la==PatitoParser.T__17 or _la==PatitoParser.T__18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 95
                self.termino()
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TerminoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PatitoParser.FactorContext)
            else:
                return self.getTypedRuleContext(PatitoParser.FactorContext,i)


        def getRuleIndex(self):
            return PatitoParser.RULE_termino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTermino" ):
                listener.enterTermino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTermino" ):
                listener.exitTermino(self)




    def termino(self):

        localctx = PatitoParser.TerminoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_termino)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.factor()
            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==PatitoParser.T__19 or _la==PatitoParser.T__20:
                self.state = 102
                _la = self._input.LA(1)
                if not(_la==PatitoParser.T__19 or _la==PatitoParser.T__20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 103
                self.factor()
                self.state = 108
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expresion(self):
            return self.getTypedRuleContext(PatitoParser.ExpresionContext,0)


        def VARCTE(self):
            return self.getToken(PatitoParser.VARCTE, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_factor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor" ):
                listener.enterFactor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor" ):
                listener.exitFactor(self)




    def factor(self):

        localctx = PatitoParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_factor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [PatitoParser.T__21]:
                self.state = 109
                self.match(PatitoParser.T__21)
                self.state = 110
                self.expresion()
                self.state = 111
                self.match(PatitoParser.T__9)
                pass
            elif token in [PatitoParser.T__17, PatitoParser.T__18, PatitoParser.VARCTE]:
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==PatitoParser.T__17 or _la==PatitoParser.T__18:
                    self.state = 113
                    _la = self._input.LA(1)
                    if not(_la==PatitoParser.T__17 or _la==PatitoParser.T__18):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 116
                self.match(PatitoParser.VARCTE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





